# matmoe-inference-c

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
export/: benchmark_tflite.py  config.py  dense_model.py  export_tflite.py  export_tflite_dense.py  moe_model.py  release_utils.py  test_translation.py
include/: slm_engine.h  slm_engine_c.h
sample-ios-app/: .gitignore  README.md  project.yml
sample-ios-app/MatMoETranslator/: ContentView.swift  Info.plist  MatMoEBridge.h  MatMoEBridge.mm  MatMoETranslator-Bridging-Header.h  MatMoETranslatorApp.swift  Tokenizer.swift  TranslationDirection.swift  TranslationViewModel.swift
sample-ios-app/Resources/: README.md
sample-ios-app/scripts/: bootstrap.sh  run_sim.sh
scripts/: build_android.sh  build_ios.sh  decode_output.py  dump_prompt.py
src/: slm_engine.cpp  slm_engine_c.cc  test_main.cc
